more responsive design changes

--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -34,7 +34,8 @@
     color: #FFF;
 
     font-family: Helvetica Neue;
-    font-size: 30px;
+   // font-size: 30px;
+    font-size: 1.875rem;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -53,7 +54,8 @@
 .navbarContent {
     color: #FAF3D6;
     font-family: Helvetica Neue;
-    font-size: 18.5px;
+   // font-size: 18.5px;
+    font-size: 1.15625rem;
     font-style: normal;
     font-weight: 400;
     letter-spacing: .5px;
@@ -87,7 +89,8 @@
   //  color: #FAF3D6;
     padding-bottom: 1px;
     font-family: Helvetica Neue;
-    font-size: 18.5px;
+   // font-size: 18.5px;
+    font-size: 1.15625rem;
     letter-spacing: .25px;
     font-weight: 500;
     line-height: normal;
@@ -114,7 +117,8 @@
     border:.5px solid #ddd;
     color: #FAF3D6;
     font-family: Helvetica Neue;
-    font-size: 19px;
+    //font-size: 19px;
+    font-size: 1.1875rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
