--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -44,7 +44,8 @@
 .heroText{
   color: #FAF3D6;
   font-family: "Helvetica Neue";
-  font-size: 109.5px;
+  //font-size: 109.5px;
+  font-size: 6.84375rem;
   font-style: normal;
   font-weight: 500;
   line-height: 100px; /* 138.099px */
@@ -69,8 +70,8 @@
 .heroSubtext {
   color: #FAF3D6;
   font-family: "Helvetica Neue";
-
-  font-size: 26px;
+  font-size: 1.625rem;
+  //font-size: 26px;
   font-style: normal;
   font-weight: 300;
   line-height: 35px; /* 134.286% */
@@ -112,7 +113,8 @@
 .heroButtonApplyText {
   font-family: Helvetica Neue;
   color:#151515;
-  font-size: 22px;
+ // font-size: 22px;
+  font-size: 1.375rem;
   font-weight: 500;
   padding-bottom: .125rem;
   letter-spacing: -.5px;
@@ -127,7 +129,8 @@
   font-family: Helvetica Neue;
   color:#fff;
   transition: all .2s linear;
-  font-size: 22px;
+ // font-size: 22px;
+ font-size: 1.375rem;
   font-weight: 400;
   border-radius: 121px;
 }
@@ -151,7 +154,8 @@
   padding-top: .75rem;
   padding-left: .75rem;
   font-family: "Helvetica Neue";
-  font-size: 37.5px;
+  //font-size: 37.5px;
+  font-size: 2.34375rem;
   font-style: normal;
   background-color: #6A7055;
   font-weight: 500;
@@ -223,7 +227,8 @@
  // padding-top: 4px;
 
   font-family: Helvetica Neue;
-  font-size: 12.5px;
+ // font-size: 12.5px;
+  font-size: 0.78125rem;
   line-height: normal;
   text-transform: uppercase;
   flex-shrink: 0;
@@ -362,7 +367,8 @@
 
   text-align: center;
   font-family: Helvetica Neue;
-  font-size: 44px;
+  //font-size: 44px;
+  font-size: 2.75rem;
   font-style: normal;
   font-weight: 400;
   line-height: 123%; /* 71.509px */
@@ -373,7 +379,8 @@
   color: #FAF3D6;
   font-family: Helvetica Neue;
   white-space: nowrap;
-  font-size: 26px;
+ // font-size: 26px;
+  font-size: 1.625rem;
   font-style: normal;
   font-weight: 300;
   line-height: 121%; /* 42.273px */
@@ -384,7 +391,8 @@
   color: #FAF3D6;
   font-family: Helvetica Neue;
   white-space: nowrap;
-  font-size: 26px;
+  //font-size: 26px;
+  font-size: 1.625rem;
   font-style: normal;
   font-weight: 300;
   line-height: 122%; /* 42.273px */
@@ -396,7 +404,8 @@
   color: #FAF3D6;
   font-family: Helvetica Neue;
   white-space: nowrap;
-  font-size: 26.25px;
+  //font-size: 26.25px;
+  font-size: 1.640625rem;
   font-style: normal;
   font-weight: 300;
   line-height: 122%; /* 42.273px */
@@ -406,7 +415,8 @@
 .placeholderText {
   color: #FAF3D6;
   font-family: "Helvetica Neue";
-  font-size: 37.5px;
+//  font-size: 37.5px;
+  font-size: 2.34375rem;
   font-style: normal;
   font-weight: 500;
   line-height: 120%; 
@@ -483,7 +493,8 @@
   color: #FAF3D6;
   text-shadow: 0px 0.5px 12px rgba(250, 243, 214, 0.70);
   font-family: Helvetica Neue;
-  font-size: 56.25px;
+  //font-size: 56.25px;
+  font-size: 3.515625rem;
   font-style: normal;
   font-weight: 400;
   line-height: 68px; /* 67.04px */
@@ -531,7 +542,8 @@
   justify-content: center;
   text-align: center;
   font-family: Helvetica Neue;
-  font-size: 22.5px;
+  //font-size: 22.5px;
+  font-size: 1.40625rem;
   padding-bottom: 1.5px;
   font-style: normal;
   font-weight: 500;
@@ -556,7 +568,8 @@
   text-align: center;
   justify-content: center;
   font-family: Helvetica Neue;
-  font-size: 22.5px;
+  //font-size: 22.5px;
+  font-size: 1.40625rem;
   font-style: normal;
   font-weight: 500;
   padding-bottom: 1.5px;
@@ -593,7 +606,8 @@
   padding-left: 1.125rem;
 
   font-family: Helvetica Neue;
-  font-size: 37.5px;
+  //font-size: 37.5px;
+  font-size: 2.34375rem;
   font-style: normal;
   font-weight: 500;
   line-height: 122%; /* 45.742px */
@@ -668,7 +682,8 @@
 
   text-align: center;
   font-family: Helvetica Neue;
-  font-size: 48.75px;
+ // font-size: 48.75px;
+  font-size: 3.046875rem;
   font-style: normal;
   text-align: center;
   font-weight: 500;
@@ -680,7 +695,8 @@
   text-align: center;
   font-family: Helvetica Neue;
   display: inline;
-  font-size: 26.25px;
+  //font-size: 26.25px;
+  font-size: 1.640625rem;
   font-style: normal;
   font-weight: 300;
   line-height: 120.781%; /* 31.705px */
@@ -732,7 +748,8 @@
   color: #FAF3D6;
 
   font-family: Helvetica Neue;
-  font-size: 26.25px;
+  font-size: 1.640625rem;
+ // font-size: 26.25px;
   font-style: normal;
   font-weight: 400;
   line-height: 122%; /* 32.02px */
@@ -742,7 +759,8 @@
   color: #FAF3D6;
 
   font-family: Helvetica Neue;
-  font-size: 18.75px;
+  //font-size: 18.75px;
+  font-size: 1.171875rem;
   font-style: normal;
   font-weight: 400;
   line-height: 120%; /* 22.347px */
@@ -771,7 +789,7 @@
 .pricingContainer {
   height: 175.51vh;
   width: 100%;
-
+  //background: url('../public/assets/waves2.svg');
   display: flex;
   flex-direction: column;
   //align-items: flex-end;
@@ -807,9 +825,11 @@ padding-bottom: 5rem;
 }
 .footerContainer {
   
-  height: 55.45vh;
+  max-height: 55.45vh;
+ // height: auto;
   width: 111.927vw;
   background-color: #252525;
+  padding-bottom: 3.83625em;
   display: flex;
   padding-left: 9.32vw;
   margin-top: auto;
@@ -833,11 +853,12 @@ padding-bottom: 5rem;
 }
 .footerButton {
   width: 32.43vw;
-  height: 9.24vh;
+ // height: 9.24vh;
+  height: auto;
   //max-height: 9.24vh;
   //flex-shrink: 0;
-  //padding-top: 1.25em;
-  //padding-bottom:1.25em;
+  padding-top: 1.25rem;
+  padding-bottom:1.25rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -846,7 +867,8 @@ padding-bottom: 5rem;
   color: #FFF;
   text-align: center;
   font-family: "Helvetica Neue";
-  font-size: 22.5px;
+ // font-size: 22.5px;
+  font-size: 1.40625rem;
   font-style: normal;
   font-weight: 700;
   transform: translateX(-.325rem);
@@ -855,10 +877,10 @@ padding-bottom: 5rem;
   text-transform: capitalize;
   background: #252525;
   margin-top: 2rem;
-  transition: all .2s linear;
+  transition: all .175s linear;
 }
 .footerButton:hover {
-  box-shadow: 4px 4px 0px 0px #0a0a0a;
+  box-shadow: 0px 6px 12px 0px #0a0a0ae3;
   background-color: #FAF3D6;
   color:#151515;
 }
@@ -866,7 +888,8 @@ padding-bottom: 5rem;
   color: #FAF3D6;
   display: inline;
   font-family: "Helvetica Neue";
-  font-size: 52.5px;
+  //font-size: 52.5px;
+  font-size: 3.28125rem;
   font-style: normal;
   font-weight: 700;
   line-height: 121.98%; /* 64.039px */
@@ -877,7 +900,8 @@ padding-bottom: 5rem;
 
   font-family: "Helvetica";
   padding-top: .325rem;
-  font-size: 26.25px;
+ // font-size: 26.25px;
+  font-size: 1.640625rem;
   font-style: normal;
   font-weight: 300;
   line-height: 119.182%; /* 31.285px */
@@ -893,19 +917,29 @@ padding-bottom: 5rem;
   background-color: #252525;
 }
 .pricingForeground {
-  width: 119.635vw;
-  max-width: 119.635vw;
-  height: 113.41vh;
-  
+ // width: 119.635vw;
+ // max-width: 119.635vw;
+  //height: 113.41vh;
+ // z-index: 0;
+
+  height: 123.46vh;
+ // max-height: 123.46vh;
+  width: 100%;
+ // margin-top: auto;
   //max-height: 123.41vh;
- // position: absolute;
+  position: absolute;
  // background-color: red;
  
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   //background-position: top;
-
-
+  //bottom:0;
+  transform: translateY(46.5vh);
+  align-items: flex-end;
+  justify-content: center;
+  align-self: flex-end;
+  object-fit: contain;
+  z-index: 1;
 
 }
 .foregroundWrapper {
@@ -923,6 +957,8 @@ padding-bottom: 5rem;
 
   background-position: bottom;
   background-size: contain;
+
+  z-index: 1;
   background-image: url('../public/assets/waves2.svg');
 }
 
@@ -937,7 +973,8 @@ padding-bottom: 5rem;
   justify-content: center;
   color: #FAF3D6;
   font-family: "Helvetica Neue";
-  font-size: 48.25px;
+  //font-size: 48.25px;
+  font-size: 3.015625rem;
   font-style: normal;
   font-weight: 500;
   line-height: 122%; /* 59.465px */
@@ -984,7 +1021,8 @@ padding-bottom: 5rem;
 
   text-align: center;
   font-family: "Helvetica Neue";
-  font-size: 22.5px;
+  font-size: 1.40625rem;
+  //font-size: 22.5px;
   font-style: normal;
   font-weight: 700;
   text-align: center;
@@ -997,7 +1035,8 @@ padding-bottom: 5rem;
   text-align: center;
   font-family: "Helvetica";
 //  display: inline;
-  font-size: 22.25px;
+  font-size: 1.390625rem;
+  //font-size: 22.25px;
   font-style: normal;
   font-weight: 300;
   line-height: 27px;
@@ -1026,7 +1065,8 @@ padding-bottom: 5rem;
 .faqsHeaderText {
   color: #FAF3D6;
   font-family: "Helvetica Neue";
-  font-size: 48.75px;
+  //font-size: 48.75px;
+  font-size: 3.046875rem;
   font-style: normal;
   font-weight: 500;
   line-height: 121.98%; /* 59.465px */
@@ -1054,29 +1094,38 @@ padding-bottom: 5rem;
   padding-right: 1rem;
   width: 100%;
   display: flex;
+
   justify-content: space-between;
   align-items: flex-start;
+  transition: all .15s linear
   //border-bottom: 2px solid #FAF3D6;
+}
+.faqsContentItemWrapper:hover .faqsContentTitle{
+ // color:#F87719;
+  color:#faa86e;
 }
 .faqsContentTitle {
   color: #FAF3D6;
   font-family: Inter; // change to inter
-  font-size: 30px;
+ // font-size: 30px;
+  font-size: 1.875rem;
   font-style: normal;
+  transition: all .15s linear;
   font-weight: 500; // change to 600
   line-height: normal;
 }
 .faqsContentSubtext {
   color: #FAF3D6;
   font-family: Helvetica Neue;
-  font-size: 19.5px;
+ // font-size: 19.5px;
+  font-size: 1.21875rem;
   font-style: normal;
   font-weight: 400;
   line-height: 28px;
 
 }
 .faqsDropdownIcon {
-  transition: all .2s linear;
+  transition: all .15s linear;
 }
 .faqsDropdownContainer {
 
