--- a/styles/proposition.module.scss
+++ b/styles/proposition.module.scss
@@ -12,7 +12,8 @@
     color: #FAF3D6;
     text-align: right;
     font-family: Helvetica Neue;
-    font-size: 60px;
+   // font-size: 60px;
+    font-size: 3.75rem;
     font-style: normal;
     font-weight: 700;
     line-height: 121.98%; /* 73.188px */
@@ -22,7 +23,8 @@
     color: #FAF3D6;
     text-align: right;
     font-family: Helvetica Neue;
-    font-size: 56.25px;
+   // font-size: 56.25px;
+    font-size: 3.515625rem;
     font-style: normal;
     font-weight: 500;
     line-height: 121.98%; /* 68.614px */
@@ -78,7 +80,8 @@
     background: #E3A77C;
     color: #252525;
     font-family: Helvetica Neue;
-    font-size: 21px;
+   // font-size: 21px;
+    font-size: 1.3125rem;
     padding-left: 2px;
     font-style: normal;
     font-weight: 700;
@@ -91,7 +94,8 @@
 .propositionIconText {
     color: #E3A77C;
     font-family: Helvetica Neue;
-    font-size: 25px;
+    font-size: 1.5625rem;
+   // font-size: 25px;
     font-style: normal;
     font-weight: 500;
 
@@ -102,7 +106,8 @@
 .propositionTitle {
     color: #FAF3D6;
     font-family: Helvetica Neue;
-    font-size: 45.5px;
+  //  font-size: 45.5px;
+    font-size: 2.84375rem;
     font-style: normal;
   //  padding-bottom: .7rem;
   //  border-bottom: 3px solid #E3A77C;
@@ -154,7 +159,8 @@
     color: #FFF;
     text-align: center;
     font-family: Helvetica Neue;
-    font-size: 22.5px;
+    //font-size: 22.5px;
+    font-size: 1.40625rem;
     font-style: normal;
     font-weight: 400;
     text-transform: capitalize;
@@ -237,7 +243,8 @@
     color: #252525;
     z-index: 1;
     font-family: Helvetica Neue;
-    font-size: 15.5px;
+   // font-size: 15.5px;
+    font-size: 0.96875rem;
     font-style: normal;
     font-weight: 700;
     line-height: 122%; /* 19.026px */
@@ -251,7 +258,8 @@
     color: #D7F9B7;
 
     font-family: Helvetica Neue;
-    font-size: 18.75px;
+    //font-size: 18.75px;
+    font-size: 1.171875rem;
     font-style: normal;
     font-weight: 500;
     line-height: 122%; /* 22.871px */
@@ -271,7 +279,8 @@
     display: inline;
     text-align: right;
     font-family: Helvetica Neue;
-    font-size: 45.75px;
+    //font-size: 45.75px;
+    font-size: 2.859375rem;
     font-style: normal;
     font-weight: 700;
     line-height: 121.98%; /* 55.806px */
@@ -361,7 +370,8 @@
 .bottomCarouselText {
     color: #FAF3D6;
     font-family: Helvetica Neue;
-    font-size: 26.25px;
+   // font-size: 26.25px;
+    font-size: 1.640625rem;
     font-style: normal;
     font-weight: 500;
     line-height: 122%; /* 32.02px */
@@ -371,7 +381,8 @@
 .bottomCarouselSubtext {
     color: #FAF3D6;
     font-family: Helvetica Neue;
-    font-size: 18.75px;
+   // font-size: 18.75px;
+    font-size: 1.171875rem;
     font-style: normal;
     font-weight: 300;
     text-align: center;
@@ -408,7 +419,8 @@
     justify-content: center;
     padding-left: 2px;
     font-family: Helvetica Neue;
-    font-size: 15.598px;
+    font-size: 0.974875rem;
+    //font-size: 15.598px;
     font-style: normal;
     font-weight: 700;
     line-height: 121.98%; /* 19.026px */
@@ -419,7 +431,8 @@
 .bottomIconText {
     color: #7978F8;
     font-family: Helvetica Neue;
-    font-size: 18.75px;
+   // font-size: 18.75px;
+    font-size: 1.171875rem;
     font-style: normal;
     font-weight: 500;
     line-height: 121.98%; /* 22.871px */
@@ -466,7 +479,8 @@
     color: #FFF;
     text-align: center;
     font-family: Helvetica Neue;
-    font-size: 22.5px;
+    //font-size: 22.5px;
+    font-size: 1.40625rem;
     font-style: normal;
     font-weight: 400;
     line-height: 121.98%; /* 27.445px */
