--- a/app/globals.css
+++ b/app/globals.css
@@ -81,12 +81,9 @@
   margin: 0;
 }
 
-html,
-body {
+html {
+
   max-width: 100vw;
-  overflow-x: hidden;
-
-
 
 
 }
@@ -94,6 +91,9 @@ body {
 body {
   color: rgb(var(--foreground-rgb));
  /* background-color: #303C30;*/
+
+  max-width: 100vw;
+  height: 100%;
  /*background: linear-gradient(180deg,#7c8874 ,#686f4f 4.75%, #2e392e 11.75%);*/
   background: linear-gradient(180deg,#7c8874 ,rgb(104, 110, 80) 3%, #2e392e 8%);
  /* background:linear-gradient(rgba(158,186,158,.58));*/
