--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -60,6 +60,7 @@
     font-weight: 400;
     letter-spacing: .5px;
     line-height: normal;
+    text-decoration: none;
     transition: all .2s linear;
 }
 .navbarContent:hover {
