--- a/app/globals.css
+++ b/app/globals.css
@@ -84,13 +84,13 @@
 html {
 
   max-width: 100vw;
-
+  min-height: 100vh;
 
 }
 
 body {
   color: rgb(var(--foreground-rgb));
- /* background-color: #303C30;*/
+
 
   max-width: 100vw;
   height: 100%;
