--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
 
 :root {
-  --max-width: 1100px;
+  --max-width: 1440px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Helvetica Neue','Inter','Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
@@ -77,6 +77,7 @@
 
 * {
   box-sizing: border-box;
+
   padding: 0;
   margin: 0;
 }
@@ -84,13 +85,15 @@
 html {
 
   max-width: 100vw;
+  min-width: 1440px;
   min-height: 100vh;
+  overflow-y: auto;
 
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-
+  overflow-y: auto;
 
   max-width: 100vw;
   height: 100%;
