--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -1158,16 +1158,53 @@ padding-bottom: 5rem;
 .faqsDropdownContainer {
 
 }
-.iframeWrapper {
+.iframeContainer {
   height: 100vh;
-  overflow: hidden;
+  background-color: #252525;
+  display: flex;
+
+
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.blackprint {
+.iframeWrapper {
+  min-height: 30.9375rem;
+ box-shadow: 0px -1px 8px 0px #57647e36;
+  width: 45.138%;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-45%);
+  transform: translateY(-45%);
+ // background-color: red;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: visible;
+  display: flex;
+
+  flex-direction: column;
+  justify-content: center;
+  
+
+}
+
+.loadingIframe {
+  width: 100%;
+  height: 100%;
+  transform: scale(1.1);
+  background-color: #252525;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ // box-shadow: 0px 4px 4px 0px #57647e36;
+}
+.mansion {
   border:none;
   outline:none;
   height: 100vh;
-}
 
+}
 
 
 /* Enable hover only on non-touch devices */
