--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -1171,7 +1171,8 @@ padding-bottom: 5rem;
 .iframeWrapper {
   min-height: 30.9375rem;
  box-shadow: 0px -1px 8px 0px #57647e36;
-  width: 45.138%;
+  min-width: 650px;
+//  max-width: 650px;
   position: absolute;
   top: 50%;
   -ms-transform: translateY(-45%);
