--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -37,8 +37,9 @@
 }
 .contentContainerHero {
  // padding-left: 6rem;
- //padding-left: 6.625%;
- padding-left: 5.9625rem;
+ padding-left: 6.625vw;
+ //padding-left: 5.9625rem;
+ //background-color: red;
  padding-top: 1.325%;
  // padding-top: 2.25rem;
   width: 60%;
@@ -214,7 +215,7 @@
 .cornerVector { 
   position:absolute;
   left:4.7%;
-  top:16%;
+  top:-16%;
 }
 .cornerVectorAlt {
   position:absolute;
@@ -332,17 +333,19 @@
   width: 100%;
   gap:1rem;
 
+
  // padding-left: 3rem;
 }
 .subsectionContainerLeft {
-  max-width: 55vw;
-  min-width: 50vw;
+  max-width: 55%;
+  width: 50%;
+  min-width: fit-content;
   padding-top: 2.2rem;
   padding-left: 6.625vw;
  // padding-left: 6rem;
   display: flex;
  // background-color: red;
-
+  padding-right: 2vw;
   flex-direction: column;
   gap:1.075rem;
   
@@ -364,28 +367,37 @@
 
 .subsectionContainerRight {
   width: 50%;
+  //min-width: fit-content;
  // padding-top: 2.25rem;
 //  padding-right: 1rem;
  // padding-top: 4.5rem;
+ //background-color: red;
   display: flex;
   justify-content: center;
   align-items: center;
 //  padding-left: 2.25rem;
   padding-right: 3.5rem;
+  //background-color: red;
+  margin-left: auto;
   padding-bottom: .875rem;
 
 }
 .subsectionSeperator {
   height:2.5px;
   align-self: center;
-
-  max-width: 15%;
-  min-width: 10.5%;
-  transform: translateX(-1.25rem) translateY(-.55rem);
+  margin-left: auto;
+//  max-width: 15%;
+//margin-right: auto;
+  width: 9.45rem;
+  min-width: 10.5vw;
   
-  position: absolute;
+
+  transform: translateX(-1.55rem) translateY(-.45rem);
+ // transform: translateX(-1.38vw) translateY(-.45rem);
+ //transform: translateY(-.45rem) translateX(-2.01vw);
+  position: relative;
   background-color: #FAF3D6;
-//  transform: translateX(100%);
+ // transform: translateX(-40%);
 }
 .subsectionText {
   color: #FAF3D6;
