--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -474,29 +474,89 @@
 .carouselContainer {
   height: 61.5vh;
   background-color: #454545;
-  width: 100%;
+  min-width: fit-content;
+
   display: flex;
+  
+  
   align-items: center;
-  justify-content: center;
+
+ // transform: translateX(-33.33%);
+
+  justify-content:flex-start;
 }
 .carouselItemContainer {
 
   height: 100%;
+
   display: flex;
   align-items: center;
+
+  //width: 33.33vw;
+  max-width: 33.33%;
+
+  min-width: 33.33%;
   justify-content: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  object-fit: cover;
+  
+
   &:nth-of-type(1) {
   //  border-right: 1px dashed #0b0b0b;
-    width: 33%;
+  //background-image: url("../public/assets/propVector.svg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  //  padding-left: 3%;
+    justify-content: center;
   }
   &:nth-of-type(2) {
-    width: 34%;
+    max-width: 36%;
+    min-width: 36%;
+    justify-content: center;
+   // background-image: url('../public/photos/imgc1-2.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    object-fit: cover;
    // border-right: 1px dashed #0b0b0b;
   }
   &:nth-of-type(3) {
-
-    width: 33%;
+   // background-image: url('../public/photos/imgc1-3.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+   // max-width: 35%;
+   // min-width: 35%;
+    justify-content: center;
+   // padding-right: 3%;
   }
+  &:nth-of-type(4) {
+   // background-image: url('../public/photos/imgc1-4.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    justify-content: center;
+  //  padding-right: 3%;
+  }
+}
+.sliderContainer {
+  min-width: 100vw;
+  max-width: 100vw;
+  background-color: transparent;
+ // background-color: red;
+  max-height: 61.5vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  z-index: 0;
+  height: 100%;
+  padding-right: 2.5rem;
+  padding-left: 2.5rem;
+  left: 0;
 }
 
 // "explore previous events
@@ -621,9 +681,10 @@
   color:#0a0a0a;
 }
 .propVector {
-  background-image: url('../public/assets/propVector.svg');
+ 
   width: 116.52vw;
   height: 72.25vh;
+  background-image: url('../public/assets/propVector.svg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -686,7 +747,7 @@
   justify-content: center;
   //background-color: #303C30;
   //background-color: rgba(255, 0, 0, 0.18);
-  background-image:linear-gradient(180deg, rgba(149, 185, 149, 0.3), rgba(248, 199, 25, 0.15) 40%, rgba(248, 199, 25, 0.15) 60%, rgba(149, 185, 149, 0.3));
+  background-image:linear-gradient(180deg, rgba(149, 185, 149, 0.35), rgba(248, 233, 25, 0.15) 48%, rgba(237, 249, 73, 0.15) 65%, rgba(149, 185, 149, 0.3));
 }
 .testimonialContainer {
   height: 90.125vh;
@@ -744,6 +805,7 @@
 }
 .testimonialCardWrapper {
   height: 28.113vh;
+  //transform: translateX(-50vw);
   width: 150vw;
   display: flex;
   gap:2.3vw;
@@ -820,6 +882,7 @@
   width: 13px;
   height: 13px;
   border-radius: 13px;
+  transition: all .15s linear;
   background-color: #d9d9d9;
   &:nth-of-type(2) {
     background-color: #F87719;
@@ -952,6 +1015,9 @@ padding-bottom: 5rem;
   width: 43.645vw;
   height: 100%;
   transform: translateX(6.45vw);
+  display: flex;
+  align-items: center;
+  justify-content: center;
  // margin-left: auto;
   border: 1px solid #FAF3D6;
   background-color: #252525;
@@ -1044,14 +1110,18 @@ padding-bottom: 5rem;
   height: 58.15vh;
 }
 .membershipCardImage {
-  width: 25.46vw;
+  min-width: 25.46vw;
+  max-width: 25.46vw;
   height: 38.5vh;
   border-radius: 37.5px;
-  background-color: #1b1b1b;
-  border: 1px dashed #7c8874;
+  //background-color: #1b1b1b;
+  //border: .5px solid #7c8874;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .membershipCardContext {
   padding-top: 1.625rem;
@@ -1218,7 +1288,28 @@ padding-bottom: 5rem;
   height: 100vh;
 
 }
+.slideButtonContainer {
+  width: 2.95rem;
+  height: 2.2rem;
+  transition: all .15s linear;
+  display: flex;
+  align-items: center;
 
+  
+  justify-content: center;
+  padding-top: 1px;
+  backdrop-filter: blur(4px);
+  border-radius: 9px;
+
+  background: rgba(217, 217, 217, 0.80);
+}
+.slideButtonContainer:hover {
+  filter: invert(1);
+  border: 1px solid #0a0a0a;
+}
+.slideButtonArrow {
+  user-select: none;
+}
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
