--- a/styles/proposition.module.scss
+++ b/styles/proposition.module.scss
@@ -132,12 +132,17 @@
    // width: 715px;
     width: 49.6527vw;
     height: 100%;
+    filter: drop-shadow(0px 4px 4px rgba(10,10,10,.1));
     display: flex;
     justify-content: center;
-    outline:1px dashed #FAF3D6;
+  //  outline:.5px solid #FAF3D6;
     z-index: 1;
 
-    background: #252525;
+   // background: #252525;
+    background-size: cover;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    background-position: center;
 }
 .exploreImageButton {
     width: 380px;
@@ -149,11 +154,16 @@
     align-items: center;
     justify-content: center;
     gap:12px;
+    backdrop-filter: blur(12px);
     padding-left: 9px;
     align-self: flex-end;
     margin-left: 1.875rem;
    // margin-right: auto;
     margin-bottom: 1.875rem;
+    transition: all .15s linear;
+}
+.exploreImageButton:hover {
+    filter: brightness(1.15);
 }
 .exploreImageText {
     color: #FFF;
@@ -195,23 +205,34 @@
     height: 100%;
     display: flex;
     z-index: 1;
-    outline:1px dashed #FAF3D6;
+    
+  //  outline:1px solid #FAF3D6;
    // background-color: #252525;
 }
 .midImageLeft {
-    width: 50%;
+    max-width: 50%;
+    min-width: 50%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    background-position: center;
 }
 .midImageRight {
-    width: 50%;
+    min-width: 50%;
+    max-width: 50%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-left: 1px dashed #FAF3D6;
+  //  border-left: 1px dashed #FAF3D6;
+    background-size: cover;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    background-position: center;
 }
 .midWrapperRight {
     width: 39.75vw;
@@ -340,6 +361,7 @@
     display: flex;
     gap:1.6145vw;
     height: 39.8267vh;
+ //   transform: translateX(7.135vw);
     //margin-left: auto;
     //margin-right: auto;
     align-self: center;
@@ -365,13 +387,13 @@
     transform: scale(1.01);
     justify-content: center;
     background-color: #252525;
-    border: 1px dashed #FAF3D6;
+    border: 1px solid #FAF3D6;
 }
 .bottomCarouselText {
     color: #FAF3D6;
     font-family: Helvetica Neue;
    // font-size: 26.25px;
-    font-size: 1.640625rem;
+    font-size: 1.625rem;
     font-style: normal;
     font-weight: 500;
     line-height: 122%; /* 32.02px */
@@ -386,8 +408,8 @@
     font-style: normal;
     font-weight: 300;
     text-align: center;
-    line-height: 120%; /* 22.646px */
-    letter-spacing: -0.562px;
+    line-height: 124%; /* 22.646px */
+ //   letter-spacing: -0.562px;
 }
 .bottomContentLeft {
     width:46.7362vw;
@@ -466,8 +488,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    outline: 1px dashed #FAF3D6;
+ //   outline: 1px dashed #FAF3D6;
     background-color: #252525;
+    background-size: cover;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    background-position: center;
+    
 }
 .caseStudiesButton {
     width: 303.75px;
@@ -496,4 +523,8 @@
 
     margin-left: auto;
     margin-right: auto;
+    transition: all .2s linear;
+}
+.caseStudiesButton:hover {
+    transform: translateY(1rem) scale(1.04);
 }
