--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -1240,6 +1240,14 @@ padding-bottom: 5rem;
 .faqsDropdownContainer {
 
 }
+.mansionContainer {
+  height: 100vh;
+  width: 100%;
+}
+.mansionIframeWrapper {
+  height: 100%;
+  min-width: 100%;
+}
 .iframeContainer {
   height: 100vh;
   background-color: #252525;
@@ -1286,7 +1294,6 @@ padding-bottom: 5rem;
   border:none;
   outline:none;
   height: 100vh;
-
 }
 .slideButtonContainer {
   width: 2.95rem;
