--- a/app/globals.css
+++ b/app/globals.css
@@ -85,7 +85,8 @@
 html {
 
   max-width: 100vw;
-  min-width: 1440px;
+ /* min-width: 1440px;*/
+  min-width: 100vw;
   min-height: 100vh;
   overflow-y: auto;
 
