--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -16,6 +16,24 @@
     justify-content: flex-end;
    // background-color: #7c8874;
 }
+.navbarContainerAlt {
+    width: 100%;
+    height: 4rem;
+  //  height: 5.625rem;
+    padding-left: 3%;
+    padding-right: 3%;
+  // background-color: #688268;
+    margin-left: auto;
+  // padding-top: 1.625rem;
+    position: absolute;
+
+    margin-top: 1.625rem;
+    align-items: flex-end;
+    display: flex;
+    margin-right: auto;
+    justify-content: flex-end;
+  // background-color: #7c8874;
+}
 .navbarWrapper {
     display: flex;
     flex-direction: row;
@@ -24,13 +42,28 @@
     width: 100%;
     justify-content: space-between;
 }
+.navbarWrapperAlt {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-self: center;
+  width: 100%;
+  justify-content: flex-start;
+}
 .navbarLogoWrapper {
     margin-left: 2.25rem;
     display: flex;
     padding-top: .125rem;
 
     align-items: center;
+}
+.navbarLogoWrapperAlt {
+  margin-left: 2.25rem;
+  display: flex;
+  padding-top: .125rem;
+  position: absolute;
 
+  align-items: center;
 }
 .navbarLogo {
     padding-top: 3.5px;
@@ -60,12 +93,33 @@
     padding-top: .825rem;
   //  background-color: red;
 }
+.navbarContentWrapperAlt {
+  display: flex;
+  align-self: center;
+  margin-left: auto;
+  margin-right: auto;
+  gap:4.5rem;
+
+
+
+  //margin-right: 5rem; for community
+  padding-top: .6rem;
+//  background-color: red;
+}
 .navbarContentLink {
     display: flex;
  
     flex-direction: column;
     transition: all .15s linear;
 
+}
+.navbarContentLinkAlt {
+  display: flex;
+  flex-direction: column;
+  transition: all .15s linear;
+}
+.navbarContentLinkAlt:hover .navbarContentHighlightAlt {
+  filter: drop-shadow(0px 3px 6px #fe8d3cc7);
 }
 .navbarContentLink:hover {
     //  color:#f59c5d;
@@ -88,6 +142,23 @@
 
    // border-bottom:1.5px solid #fe8d3c;
 }
+.navbarContentAlt {
+  color: #fff;
+  font-family: Helvetica Neue;
+ // font-size: 18.5px;
+  font-size: 1.15625rem;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: .5px;
+  line-height: normal;
+  padding-top: 7px;
+  padding-bottom: 5px;
+  text-decoration: none;
+  transition: all .2s linear;
+ // padding-bottom: .25rem;
+
+ // border-bottom:1.5px solid #fe8d3c;
+}
 .navbarContent:hover {
   //  color:#f59c5d;
  //  transform: translateY(-.075rem);
@@ -98,6 +169,16 @@
     background-color: #fe8d3c;
 
 }
+.navbarContentHighlightAlt {
+  height: 2px;
+  width: 95%;
+  align-self: center;
+  transition: all .2s linear;
+  background-color: #fe8d3c;
+ // box-shadow: 0px 2px 4px 0px #fe8d3c;
+  filter: drop-shadow(0px 2px 6px #fe8d3c00);
+}
+
 .navbarButtonContainer {
     display: flex;
 
