--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -26,7 +26,7 @@
     margin-left: auto;
   // padding-top: 1.625rem;
     position: absolute;
-
+    top:0;
     margin-top: 1.625rem;
     align-items: flex-end;
     display: flex;
@@ -241,4 +241,122 @@
   //  filter: invert(1);
     background-color: #FAF3D6;
     color:#0a0a0a;
+}
+.navmenuIcon {
+  padding: 0;
+  padding-top: .325rem;
+}
+
+
+@media (max-width: 390px) {
+  .navbarContainer {
+    width: 100%;
+    height: 4rem;
+    box-sizing: border-box;
+  //  height: 5.625rem;
+    padding-left: 7.5%;
+
+    padding-right: 8%;
+   // background-color: #688268;
+    margin-left: auto;
+   // padding-top: 1.625rem;
+   // position: absolute;
+
+    margin-top: 1.625rem;
+    align-items: center;
+    overflow: hidden;
+    display: flex;
+    margin-right: auto;
+    justify-content: space-between;
+   // background-color: #7c8874;
+  }
+  .navbarWrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-self: center;
+    width: 100%;
+    justify-content: space-between;
+  }
+  .navbarLogoWrapper {
+    margin-left: 0;
+    display: flex;
+    padding-top: 0;
+
+    align-items: center;
+  }
+
+  .navbarLogo {
+    padding-top: 2px;
+    padding-right: 8px;
+
+  // background-color: rgba(255, 0, 0, 0.108);
+  }
+  .navbarLogoText {
+    color: #FFF;
+
+    font-family: Helvetica Neue;
+  // font-size: 30px;
+    font-size: clamp(1rem, 6.5vw, 1.875rem);
+
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    padding-bottom: 1px;
+  }
+  .navbarContent {
+    display: none;
+  }
+  .navbarButtonContainer {
+    display: none;
+
+  }
+
+  .navMenuContainer {
+    position:relative;
+    z-index: 999;
+    width: 100%;
+}
+  .menuContentContainer {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    min-width: 100%;
+    align-self: flex-end;
+    z-index: 999;
+    background-color: #01010133;
+    min-height: 38vh;
+    border-top: 1px dashed #FAF3D633;
+    border-bottom: 1px dashed #FAF3D633;
+    padding-left: .625rem;
+    gap:.5rem;
+    justify-content: center;
+    -webkit-backdrop-filter: blur(13px);
+    backdrop-filter: blur(13px);
+  //  border-top:1px solid #444444aa;
+    align-items: flex-start;
+   // padding-left: 4;
+}
+.menuItemContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #FFF;
+    z-index: 999;
+    text-align: center;
+    font-family: Helvetica Neue;
+    font-size: 1.25rem;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: .25px;
+    padding-top: .625rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+    padding-bottom: .65rem;
+    border-radius: 10px;
+    transition: all .2s linear;
+}
 }
