--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -262,7 +262,7 @@
    // padding-top: 1.625rem;
    // position: absolute;
 
-    margin-top: 1rem;
+    margin-top: .5rem;
     align-items: center;
     overflow: hidden;
     display: flex;
