--- a/app/globals.css
+++ b/app/globals.css
@@ -112,7 +112,8 @@ a {
     padding: 0;
     margin: 0;
     overflow-y: scroll;
-    background:#303C30;
+    background: linear-gradient(180deg,#303C30 ,#212a21 60%);
+    
     width: 100%;
   }
   html{
