mobile landing and subsection

--- a/app/globals.css
+++ b/app/globals.css
@@ -113,12 +113,13 @@ a {
     margin: 0;
     overflow-y: scroll;
     background: linear-gradient(180deg,#303C30 ,#212a21 60%);
-    
+    background-color: #303C30;
     width: 100%;
   }
   html{
     padding:0;
     margin:0;
+    background-color: #303C30;
 
   }
 }
