--- a/app/globals.css
+++ b/app/globals.css
@@ -83,10 +83,10 @@
 
 html {
 
-  max-width: 100vw;
+  /*max-width: 100vw;*/
  /* min-width: 1440px;*/
-  min-width: 100vw;
-  min-height: 100vh;
+  /*min-width: 100vw;*/
+ /* min-height: 100vh;*/
   overflow-y: auto;
 
 }
@@ -95,7 +95,8 @@ body {
   color: rgb(var(--foreground-rgb));
   overflow-y: auto;
 
-  max-width: 100vw;
+/*  max-width: 100vw;*/
+  width: 100vw;
   height: 100%;
  /*background: linear-gradient(180deg,#7c8874 ,#686f4f 4.75%, #2e392e 11.75%);*/
   background: linear-gradient(180deg,#7c8874 ,rgb(104, 110, 80) 3%, #2e392e 8%);
@@ -114,7 +115,8 @@ a {
     overflow-y: scroll;
     background: linear-gradient(180deg,#303C30 ,#212a21 60%);
     background-color: #303C30;
-    width: 100%;
+   /* width: 100%;*/
+   min-width: 100%;
   }
   html{
     padding:0;
