--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -1242,13 +1242,21 @@ padding-bottom: 5rem;
 
 }
 .mansionContainer {
-  height: fit-content;
+ // height: fit-content;
+ height: 100%;
 
   width: 100%;
 }
 .mansionIframeWrapper {
   height: 100%;
   min-width: 100%;
+
+  
+ // padding-bottom: 56.25%;
+ // position: relative;
+ // width: 100%;
+ // height: 0vh; /* Full height of the viewport */
+//  overflow: hidden;
 }
 .iframeContainer {
   height: 100vh;
@@ -1296,6 +1304,13 @@ padding-bottom: 5rem;
   border:none;
   outline:none;
   height: fit-content;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  //border: none;
+  //padding-bottom: 56.25%
 }
 .slideButtonContainer {
   width: 2.95rem;
@@ -1342,7 +1357,7 @@ padding-bottom: 5rem;
 @media (max-width: 390px) {
   .main {
     display: flex;
-    flex-direction: column;
+    flex-direction: columnf;
     padding: 0;
     min-height: 100vh;
     justify-content: flex-start;
