--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -359,4 +359,37 @@
     border-radius: 10px;
     transition: all .2s linear;
 }
+.navbarContainerAlt {
+  width: 100%;
+  height: 4rem;
+//  height: 5.625rem;
+  padding-left: 0%;
+  padding-right: 0%;
+// background-color: #688268;
+  margin-left: auto;
+// padding-top: 1.625rem;
+  position: absolute;
+  top:0;
+  margin-top: 1.625rem;
+  align-items: flex-end;
+  display: flex;
+  margin-right: auto;
+  justify-content: flex-end;
+// background-color: #7c8874;
+}
+
+.navbarContentWrapperAlt {
+  display: flex;
+  align-self: center;
+  margin-left: auto;
+  margin-right: 4rem;
+  transform: translateY(-.125rem);
+  gap:4.5rem;
+
+
+
+  //margin-right: 5rem; for community
+  padding-top: .6rem;
+//  background-color: red;
+}
 }
