--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -1303,10 +1303,10 @@ padding-bottom: 5rem;
 .mansion {
   border:none;
   outline:none;
-  height: fit-content;
-  position: absolute;
-  top: 0;
-  left: 0;
+ // height: fit-content;
+ // position: absolute;
+ // top: 0;
+ // left: 0;
   width: 100%;
   height: 100%;
   //border: none;
