--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -614,7 +614,11 @@
   flex-shrink: 0;
   border-radius: 21px;
 }
+.applySubtextContainer {
+  width: 100%;
+  padding-top: 2.325rem;
 
+}
 
 .applyWrapperRight {
  //background-color: rgba(255, 0, 0, 0.161);
@@ -1369,7 +1373,7 @@ padding-bottom: 5rem;
    // background-color: blue;
 
     //padding: 6rem;
-    overflow-x: visible;
+    overflow-x: hidden;
   }
   .contentContainer {
     // background-color: rgba(255, 0, 0, 0.123);
@@ -1546,9 +1550,9 @@ padding-bottom: 5rem;
      border-radius: 121px;
      padding-left:1.125rem;
      padding-right: 1.125rem;
-    padding-top: 0.4rem;
-    padding-bottom: 0.4rem;
-     gap:.625rem;
+      padding-top: 0.4rem;
+      padding-bottom: 0.4rem;
+      gap:.625rem;
    }
    .heroButtonAlt:hover {
      background-color: #FAF3D6;
@@ -1773,7 +1777,7 @@ padding-bottom: 5rem;
   font-family: Helvetica Neue;
   white-space: nowrap;
   //font-size: 26.25px;
-  font-size: 1.640625rem;
+  font-size: clamp(.925rem, 3vw, 1.625rem);
   font-style: normal;
   font-weight: 300;
   line-height: 122%; /* 42.273px */
@@ -1783,7 +1787,339 @@ padding-bottom: 5rem;
 .subSeperatorSmall {
   transform: translateY(0);
 }
+  // carousel 1
+  .carouselSection {
+    //background-color: red;
+  
+    width: 100%;
+    //height: 61.5vh;
+    display: flex;
 
+    flex-direction: column;
+    height: 12.75rem;
+  }
+  .carouselContainer {
+    height: 100%;
+    background-color: #454545;
+    min-width: fit-content;
+  
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior:smooth;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+    
+    align-items: center;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    
+    /* Prevent scrollbar space */
+    overflow: -moz-scrollbars-none; /* Older Firefox */
+   // transform: translateX(-33.33%);
+  
+    justify-content:flex-start;
+  }
+  .carouselItemContainer {
+  
+    height: 100%;
+  
+    display: flex;
+    align-items: center;
+    flex: 0 0 50%; /* Each item takes up 50% of the width */
+   scroll-snap-align: start;
+  
+    //width: 33.33vw;
+    max-width: 50%;
+  
+    min-width: 50%;
+    justify-content: center;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    
+  
+    &:nth-of-type(1) {
+    //  border-right: 1px dashed #0b0b0b;
+    //background-image: url("../public/assets/propVector.svg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    //  padding-left: 3%;
+      justify-content: center;
+    }
+    &:nth-of-type(2) {
+      max-width: 50%;
+      min-width: 50%;
+      justify-content: center;
+     // background-image: url('../public/photos/imgc1-2.jpeg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      object-fit: cover;
+     // border-right: 1px dashed #0b0b0b;
+    }
+    &:nth-of-type(3) {
+     // background-image: url('../public/photos/imgc1-3.jpeg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+     // max-width: 35%;
+     // min-width: 35%;
+      justify-content: center;
+     // padding-right: 3%;
+    }
+    &:nth-of-type(4) {
+     // background-image: url('../public/photos/imgc1-4.jpeg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      justify-content: center;
+    //  padding-right: 3%;
+    }
+  }
+
+
+  // "explore previous events
+
+  .applyContainer {
+    height: fit-content;
+    width: 100%;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    margin-top: 2.5rem;
+
+    //justify-content: center;
+  // flex-direction: column;
+  }
+  .applyWrapperLeft {
+  //  background-color: rgba(0, 255, 208, 0.161);
+    width: 100%;
+
+    height: 100%;
+    display: flex;
+    padding-top: 2rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .applyHeroContainer {
+    display: flex;
+    flex-direction: column;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    width: 100%;
+    
+
+    padding-bottom: 2.125rem;
+
+  }
+  .applyHeroText {
+    color: #FAF3D6;
+    text-shadow: 0px 0px 4px rgba(250, 243, 214, 0.50);
+    font-family: Helvetica Neue;
+    //font-size: 56.25px;
+   // font-size: 3.515625rem;
+
+    font-size: clamp(1.675rem, 5vw, 3.5rem);
+    font-style: normal;
+    font-weight: 400;
+    text-align: center;
+    line-height: 120%; /* 67.04px */
+    letter-spacing: -1.5px;
+    display: inline;
+
+  }
+  .applyHeroContext {
+    display: flex;
+    padding-top: 1.625rem;
+    gap:1em;
+  //padding-left: .25rem;
+
+
+  }
+  .applyHeroContextImage {
+    background-color: #d0d0d0;
+    width: 2.375rem;
+    height: 2.375rem;
+    flex-shrink: 0;
+    border-radius:10px;
+  }
+  .subtext {
+    color: #FAF3D6;
+    font-family: Helvetica Neue;
+    white-space: inherit;
+    //font-size: 26.25px;
+    font-size: clamp(.925rem, 3vw, 1.625rem);
+    font-style: normal;
+    font-weight: 300;
+    line-height: 122%; /* 42.273px */
+    letter-spacing: -.3px;
+    display: inline;
+  }
+
+
+  .applySubtextContainer {
+    width: 100%;
+    padding-left: .25rem;
+    padding-right:1.875rem;
+    padding-top: 1.325rem;
+
+
+
+  }
+  .applyButtonContainer {
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    align-self: center;
+     display:flex;
+     min-width: fit-content;
+    height: auto;
+   // background-color: blue;
+     gap:.625rem;
+     padding-top: 2rem;
+     padding-left: 0rem;
+   }
+  .applyTodayButton {
+    width: fit-content;
+    height:3rem;
+
+    flex-shrink: 0;
+    border-radius: 90.75px;
+    border: 4px solid #FAF0C6;
+    background: #FAE691;
+    color: #252525;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-family: Helvetica Neue;
+    //font-size: 22.5px;
+    font-size: clamp(.875rem, 4.125vw, 1.375rem);
+    //padding-bottom: 1.5px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 122%; /* 27.445px */
+    letter-spacing: -0.5px;
+    text-transform: capitalize;
+    filter: drop-shadow(0px 4px 8px rgba(0,0,0,0.25));
+    transition: all .15s linear;
+    padding-left:1.25rem;
+    padding-right: 1.25rem;
+    padding-top: .4rem;
+    padding-bottom: .4rem;
+  }
+  .applyTodayButton:hover {
+    transform: scale(1.05);
+  }
+  .explorePrevButton {
+   
+    flex-shrink: 0;
+    border-radius: 90.75px;
+
+    border: 2px solid #fff;
+    width: fit-content;
+
+    height: 3rem;
+    color: #f9f9f9;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    font-family: Helvetica Neue;
+    //font-size: 22.5px;
+    font-size: clamp(.875rem, 4.125vw, 1.375rem);
+    font-weight: 400;
+    font-style: normal;
+
+    padding-left:1rem;
+    padding-right: 1rem;
+     padding-top: 0.375rem;
+     padding-bottom: 0.375rem;
+    line-height: 122%; /* 27.445px */
+    letter-spacing: -0.5px;
+    text-transform: capitalize;
+    transition: all .15s linear;
+  }
+  .explorePrevButton:hover {
+    background-color: #FAF3D6;
+    color:#0a0a0a;
+  }
+
+
+  .propVector {
+  
+    width: 116.52vw;
+    height: 72.25vh;
+    background-image: url('../public/assets/propVector.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    z-index: 0;
+  }
+  .applyWrapperRight {
+    background-color: rgba(255, 0, 0, 0.161);
+      width: 88%;
+      padding-right: 0;
+      padding-bottom: 0;
+      height: 16rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  .applyVideoContainer {
+    //width: 33.88vw;
+    //height: 64.7vh;
+    min-width: 100%;
+    min-height: 100%;
+    border: 0.75px solid #FAF3D6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #303C30;
+    flex-shrink: 0;
+    padding-top:0;
+    color: #FAF3D6;
+    padding-left: 0;
+
+    font-family: Helvetica Neue;
+    //font-size: 37.5px;
+    font-size: 2.34375rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 122%; /* 45.742px */
+    letter-spacing: -1.125px;
+    text-transform: uppercase;
+  }
+  .propositionTopContainer {
+    background: transparent;
+   // background: linear-gradient(180deg, rgba(158, 186, 158, 0.29) 0%, rgba(248, 199, 25, 0.00) 100%);
+    height: fit-content; // set to 100vh maybe
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    z-index: 0;
+  }
+  .propositionMidContainer {
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    //align-items: center;
+   // background-color: rgba(255, 0, 0, 0.289);
+    //justify-content: center;
+    //background-color: rgba(87, 109, 87, 00);
+  }
 }
 
 
